Changes in 0.5:
  o API Changes:
    * searchPath elements now have additional attributes exposed
      which denote contexts to which they apply.  Right now, the
      two attributes exposed are isResolveTrove and isGroupSearchPathTrove
      which default to True (no change in behavior) but can be
      set to limit the applicability of an element.  In addition,
      product definition objects have additional getResolveTroves
      and getGroupSearchPaths methods which filter the searchPaths
      by the attributes exposed. (RPCL-53)

  o Bug Fixes:
    * Don't add platform defaults if proddef defines any of
      containerTemplates, architectures, buildTemplates, or
      flavorSets. (RPCL-54)

  o Schema Versions:
    * 2.0: Backward-compatible extension to support RPCL-53.

Changes in 0.4:
  o API Changes:
    * Images are now defined differently.  Platforms provide
      generic information about image types, architectures, and sets
      of flavors, which are then referenced from build definitions
      in individual product-definition.xml files.  As part of this
      work, the UnsupportedImageType and ImageTemplateNotFoundError
      exceptions have been removed, and the FlavorSetNotFoundError,
      ContainerTemplateNotFoundError, and BuildTemplateNotFoundError
      exceptions have been added.  Incompatible XML schema changes
      were required, introducing schema version 2.0.  These changes
      are reflected in extensive API changes that are not
      backwards-compatible. (RPCL-21, RPCL-25, RPCL-46)
    * Exception classes have been changed to have names that consistently
      end in "Error": ProductDefinitionTroveNotFound is now
      ProductDefinitionTroveNotFoundError, ProductDefinitionFileNotFound
      is now ProductDefinitionFileNotFoundError, and 
      InvalidSchemaVersionError has been added.
    * The sourceGroup element specifies the source from which a group
      is built.  New APIs have been added to produce and consume the