@@ -1,3 +1,8 @@
+Changes in @NEW@:
+  o Documentation Fixes:
+    * The documentation for promoteMap specification was incorrect,
+      and has been improved. (RPCL-37)
+
 Changes in 0.5:
   o API Changes:
     * searchPath elements now have additional attributes exposed
